blog-preview-css

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     -->
     <title>Allan Fernandes</title>
     <link rel="stylesheet" href="https://use.typekit.net/doo8gqh.css">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
